# imgui-Boilerplate

./: CMakeLists.txt  README.md
dependencies/: glad.c
dependencies/glad/: glad.h
include/core/: config.h
include/utils/: Timer.hpp
src/: gui.cpp  main.cpp  render.cpp
